2013-08-25  Per Bothner  <per@bothner.com>

	* Lisp2.java (createReadTable): Specify that '#' is non-terminating.

2013-03-04  Charles Turner <chturne@gmail.com>

	* OrdinaryLambda.java: New class, extends kawa.lang.Lambda.
	* Makefile.am: Update accordingly.
	* CommonLisp.java (initLisp): Use OrdinaryLambda.
	(isEq): New field.

2012-12-31  Per Bothner  <per@bothner.com>

	* CommonLisp.java (initLisp): Update definitions of princ, prin1.
	(writeFormat, displayFormat): Mak public since needed by new functions.

2012-12-30  Charles Turner <chturne@gmail.com>
	    Per Bothner <per@bothner.com>

	* Lisp2.java: Added more documentation. Minor code cleanups.

2012-10-20  Charles Turner <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	Re-factor type lookup to avoid Scheme dependencies.
	* CommonLisp.java: Don't use static Scheme methods.
	(getNamedType): New method.

2012-08-18  Per Bothner  <per@bothner.com>

	* Lisp2Compilation.java (rewriteBody): Use errorWithPosition.

2012-08-14  Charles Turner  <chturne@gmail.com>

	* Lisp2Compilation.java (rewriteBody): New method, process declare
	form.

2012-08-13  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Add defun for internal flet rewriter.

2012-07-01  Charles Turner  <chturne@gmail.com>

	* Symbols.java (isSymbol): Fix the incorrect definition whereby a
	string was considered a symbol.

2012-07-01  Per Bothner  <per@bothner.com>

	* Lisp2.java (getNamespaceOf): Also check Declaration.IS_SYNTAX.

2012-06-04  Jamison Hope  <jrh@theptrgroup.com>

	Fixes for erroneous warnings and lookup failures.
	* defun.java (scanForDefinitions): Fix declaration lookup to
	specify function namespace.  Push newly created declaration to
	lexical bindings map.
	* defvar.java (scanForDefinitions): Likewise, but specifying value
	namespace.
	* function.java (rewriteForm): Look for an existing declaration
	when creating ReferenceExp.

2012-04-05  Per Bothner  <per@bothner.com>
